# algorithm_preparation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
MatrixSimulation/: 48_rotate.cpp
SearchAndSort/search/: myBinarySearch.cpp  myLowerBound.cpp  myMaxHeap.cpp  myMinHeap.cpp  myUpperBound.cpp
SearchAndSort/sort/: myBubbleSort.cpp  myHeapSort.cpp  myInsertionSort.cpp  myMergeSort.cpp  myQuickSort.cpp  mySelectionSort.cpp
SearchAndSort/treeArray/: 1_treeArraySum.cpp  2_templateRankFromStream.cpp  3_NthNumInArray.cpp  4_DataFlowMedian.cpp  4_InifiniteDataFlowMedian.cpp  5_ReverseNumPair.cpp
StackAndQueue/: monotonousQueue.cpp
StackAndQueue/queue/: priority_queue.cpp
StackAndQueue/stack/: 1047_removeDuplicates.cpp  150_evalRPN.cpp  20_isValid.cpp  monotonousStack.cpp
backtrack/: backtracking_presudo.md
backtrack/combine/: 17_letterCombinations.cpp  216_combinationSum3.cpp  39_combinationSum.cpp  40_combinationSum2.cpp  77_combine.cpp
dp/basicdp/: 96_numTrees.cpp  (+3 more)
graph/: 10_FullReachableDirectGraph.cpp  10_UseUnionSearchSlove.cpp  11_IslandCircumference.cpp  12_UnionSearch.cpp  13_RedundantConnection.cpp  14_DGraphRedundantConnectiom.cpp  15_TopologicalSort.cpp  16_CriticalPath.cpp  17_KruskalMST.cpp  18_PrimMST.cpp  19_Floyd.cpp  1_graphStore.cpp  20_Dijkstra.cpp  21_Bellman-Ford.cpp  22_SPFA.cpp  23_LimitRoadMinPath.cpp  24_ModifiedDijkstra.cpp  2_dfsGraph.cpp  3_dfsAllPaths.cpp  4_bfsGraph.cpp  5_NumOfConnectedSubGraph.cpp  6_MaxConnectedSubGraph.cpp  7_SumOfIslandArea.cpp  8_WaterFlow.cpp  9_BuildBiggestIsland.cpp
mock_test/: inter.cpp  lru.cpp
(+83 files in other folders)
